--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CameraExample</string>
     <string name="action_settings">Settings</string>
     <string name="take_picture">Take picture</string>
+    <string name="reset_number">Reset Img</string>
 </resources>
